[package]
name = "rlu"
version = "0.3.1"
edition = "2018"
description = "Sparse LU factorization with partial pivoting"
repository = "https://github.com/rwl/rlu/"
license = "BSD-3-Clause"
categories = ["algorithms", "mathematics", "science"]
default-run = "simple"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
rayon = "1.5"

[features]
debug = []