[package]
name = "gplu"
version = "0.1.0"
edition = "2018"
description = "Sparse LU factorization with partial pivoting"
repository = "https://github.com/rwl/gplu/"
license = "BSD-3-Clause"
categories = ["algorithms", "mathematics", "science"]

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
rayon = { version = "1.5", optional = true }

[features]
debug = []

[[example]]
name = "simple"
required-features = ["rayon"]
